--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="banner-image">
-            <img src="/assets/boat131-3.png" alt="boAt Birds">
+            <img src="./assets/boat131-3.png" alt="boAt Birds">
         </div>
 
     </div>
@@ -59,7 +59,7 @@
 
         <div class="card-position-3">
             <h5>JBL Eandurance Run Sports</h5>
-            <img src="/assets/jbl-endu-1.png" alt="jbl neck band">
+            <img src="./assets/jbl-endu-1.png" alt="jbl neck band">
             <div class="align-price">
                 <span class="hover-card3-offer-price">₹999</span>
                 <span class="hover-card3-original-price">₹1,599</span>
@@ -68,7 +68,7 @@
 
         <div class="card-position-2">
             <h3>boAt Airdopes 203</h3>
-            <img src="/assets/boat203-1.png" alt="boar ear birds">
+            <img src="./assets/boat203-1.png" alt="boar ear birds">
             <div class="align-price">
                 <span class="hover-card2-offer-price">₹1,074</span>
                 <span class="hover-card2-original-price">₹3,999</span>
@@ -77,7 +77,7 @@
 
         <div class="card-position-1">
             <h1>boAt Rockerz 518</h1>
-            <img src="/assets/boat518-1.png" alt="boat heda set">
+            <img src="./assets/boat518-1.png" alt="boat heda set">
             <div class="align-price">
                 <span class="hover-card1-offer-price">₹,1,299</span>
                 <span class="hover-card1-original-price">₹3,990</span>
@@ -86,7 +86,7 @@
 
         <div class="card-position-2">
             <h3>JBL Tune 760NC</h3>
-            <img src="/assets/jbl760nc-1.png" alt="jbl head set">
+            <img src="./assets/jbl760nc-1.png" alt="jbl head set">
             <div class="align-price">
                 <span class="hover-card2-offer-price">₹5,999</span>
                 <span class="hover-card2-original-price">₹7,999</span>
@@ -95,7 +95,7 @@
 
         <div class="card-position-3">
             <h5>boAt Rockerz 255</h5>
-            <img src="/assets/boat255r-1.png" alt="boat neck band">
+            <img src="./assets/boat255r-1.png" alt="boat neck band">
             <div class="align-price">
                 <span class="hover-card3-offer-price">₹899</span>
                 <span class="hover-card3-original-price">₹2,990</span>
@@ -127,7 +127,7 @@
     <div class="group-of-cards">
         <!--------------------------------------------------------------------------------------------------------------------First Line Products-->
         <div class="gc-details">
-            <img src="/assets/jbl660nc-1.png" alt="JBL Headphones">
+            <img src="./assets/jbl660nc-1.png" alt="JBL Headphones">
             <h3>JBL Live 660NC</h3><br>
             <p>Wireless Over-Ear NC Headphones</p>
             <hr>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/boat518-1.png" alt="boAt Headphones">
+            <img src="./assets/boat518-1.png" alt="boAt Headphones">
             <h3>boAt Rockerz 518</h3><br>
             <p>On-Ear Wireless Headphones</p>
             <hr>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/boat131-1.png" alt="boAt Airdopes">
+            <img src="./assets/boat131-1.png" alt="boAt Airdopes">
             <h3>boAt Airdopes 131</h3><br>
             <p>Wireless In-Ear Earbuds</p>
             <hr>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/boat110-1.png" alt="boAt ear-phones">
+            <img src="./assets/boat110-1.png" alt="boAt ear-phones">
             <h3>boAt BassHeads 110</h3><br>
             <p>In-Ear Earbuds</p>
             <hr>
@@ -167,7 +167,7 @@
         </div>
         <!-------------------------------------------------------------------------------------------------------------------Second Line Products-->
         <div class="gc-details">
-            <img src="/assets/boat410-1.png" alt="boAt Headphones">
+            <img src="./assets/boat410-1.png" alt="boAt Headphones">
             <h3>boAt Rockerz 410</h3><br>
             <p>Bluetooth & Wired On-Ear Headphones</p>
             <hr>
@@ -177,7 +177,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/jbl200bt-1.png" alt="JBL Neckband">
+            <img src="./assets/jbl200bt-1.png" alt="JBL Neckband">
             <h3>JBL Live 200BT</h3><br>
             <p>In-Ear Wireless Neckbands</p>
             <hr>
@@ -187,7 +187,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/sonyXb910n-1.png" alt="Sony Headphones">
+            <img src="./assets/sonyXb910n-1.png" alt="Sony Headphones">
             <h3>Sony Wh-XB910N</h3><br>
             <p>Wireless Over-Ear Headphones</p>
             <hr>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/jbl760nc-1.png" alt="JBL Headphones">
+            <img src="./assets/jbl760nc-1.png" alt="JBL Headphones">
             <h3>JBL Tune 760NC</h3><br>
             <p>Wireless Over-Ear NC Headphones</p>
             <hr>
@@ -207,7 +207,7 @@
         </div>
         <!--------------------------------------------------------------------------------------------------------------------Third Line Products-->
         <div class="gc-details">
-            <img src="/assets/boat255r-1.png" alt="boA Neckband">
+            <img src="./assets/boat255r-1.png" alt="boA Neckband">
             <h3>boAt Rockerz 255</h3><br>
             <p>In-Ear Wireless Neckbands</p>
             <hr>
@@ -217,7 +217,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/jbl100-1.png" alt="JBL Buds">
+            <img src="./assets/jbl100-1.png" alt="JBL Buds">
             <h3>JBL Wave 100</h3><br>
             <p>In-Ear Truly Wireless Earbuds</p>
             <hr>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="gc-details">
-            <img src="/assets/sony1000xm4-1.png" alt="Sony Earbuds">
+            <img src="./assets/sony1000xm4-1.png" alt="Sony Earbuds">
             <h3>Sony WF-1000XM4</h3><br>
             <p>Wireless In-Ear NC Headphones</p>
             <hr>
