--- a/productcard.html
+++ b/productcard.html
@@ -30,22 +30,22 @@
 
         <div class="simages">
             <div class="img1">
-                <img src="/assets/jbl660nc-1.png" alt="pic1">
+                <img src="./assets/jbl660nc-1.png" alt="pic1">
             </div>
             <div class="img2">
-                <img src="/assets/jbl660nc-2.png" alt="pic2">
+                <img src="./assets/jbl660nc-2.png" alt="pic2">
             </div>
             <div class="img3">
-                <img src="/assets/jbl660nc-3.png" alt="pic3">
+                <img src="./assets/jbl660nc-3.png" alt="pic3">
             </div>
             <div class="img4">
-                <img src="/assets/jbl660nc-4.png" alt="pic4">
+                <img src="./assets/jbl660nc-4.png" alt="pic4">
             </div>
         </div>
 
         <div class="bimage">
             <div class="pcmain-image">
-                <img src="/assets/jbl660nc-1.png" alt="main_img">
+                <img src="./assets/jbl660nc-1.png" alt="main_img">
             </div>
         </div>
         <!--------------------------------------------------------------------------------------------------------------------------Product Price-->
@@ -143,7 +143,7 @@
     <br><br>
     <div class="rel_products">
         <div class="card">
-            <img src="/assets/jbl660nc-1.png" alt="JBL Headphones">
+            <img src="./assets/jbl660nc-1.png" alt="JBL Headphones">
             <p class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                     class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
             <br>
@@ -161,7 +161,7 @@
         </div>
 
         <div class="card">
-            <img src="/assets/boat518-1.png" alt="boAt Headphones">
+            <img src="./assets/boat518-1.png" alt="boAt Headphones">
             <p class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                     class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
             <br>
@@ -179,7 +179,7 @@
         </div>
 
         <div class="card">
-            <img src="/assets/boat410-1.png" alt="boAt Headphones">
+            <img src="./assets/boat410-1.png" alt="boAt Headphones">
             <p class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                     class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
             <br>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="card">
-            <img src="/assets/sonyXb910n-1.png" alt="sony Headphones">
+            <img src="./assets/sonyXb910n-1.png" alt="sony Headphones">
             <p class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                     class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
             <br>
