--- a/techshopaddtocart.html
+++ b/techshopaddtocart.html
@@ -31,7 +31,7 @@
             <div class="content-1">
 
                 <div>
-                    <img src="/assets/jbl660nc-1.png" alt="JBL Headphones">
+                    <img src="./assets/jbl660nc-1.png" alt="JBL Headphones">
                 </div>
 
                 <div>
@@ -62,7 +62,7 @@
             <div class="content-2">
 
                 <div>
-                    <img src="/assets/boat518-1.png" alt="boAt Headphones">
+                    <img src="./assets/boat518-1.png" alt="boAt Headphones">
                 </div>
 
                 <div>
@@ -91,7 +91,7 @@
             <div class="content-3">
 
                 <div>
-                    <img src="/assets/boat131-1.png" alt="boAt Airdopes">
+                    <img src="./assets/boat131-1.png" alt="boAt Airdopes">
                 </div>
 
                 <div>
@@ -119,7 +119,7 @@
             <div class="content-4">
 
                 <div>
-                    <img src="/assets/boat110-1.png" alt="boAt Airdopes">
+                    <img src="./assets/boat110-1.png" alt="boAt Airdopes">
                 </div>
 
                 <div>
