--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="nav-icons">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-cart-shopping"></i>
-            <i class="fa-regular fa-user"></i>
+            <a href="./techshoplogin.html"><i class="fa-regular fa-user"></i></a>
         </div>
 
     </nav>
@@ -127,7 +127,7 @@
     <div class="group-of-cards">
         <!--------------------------------------------------------------------------------------------------------------------First Line Products-->
         <div class="gc-details">
-            <img src="./assets/jbl660nc-1.png" alt="JBL Headphones">
+            <a href="./productcard.html"><img src="./assets/jbl660nc-1.png" alt="JBL Headphones"></a>
             <h3>JBL Live 660NC</h3><br>
             <p>Wireless Over-Ear NC Headphones</p>
             <hr>
