--- a/techshopaddtocart.html
+++ b/techshopaddtocart.html
@@ -18,7 +18,7 @@
 
         <div class="nav-icons">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <a href="./index.html"><i class="fa-solid fa-cart-shopping"></i></a>
             <i class="fa-regular fa-user"></i>
         </div>
 
