--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="nav-icons">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <a href="./productcard.html"><i class="fa-solid fa-cart-shopping"></i></a>
             <a href="./techshoplogin.html"><i class="fa-regular fa-user"></i></a>
         </div>
 
